--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
+<html>
+<head>
+<style>
+body {
+    background-color: lightblue;
+}
+h1 {
+    text-align: center;
+}
+
+</style>
+</head>
+<body>
+
 <h1>PROFILE<h1>
 <p>Name: Pakteema Nopsuwanchai </p>
 <p>Nickname: Sand </p>
-<p>Student number:58102010818 </p>
+<p>Birthday 16 Feb 1996</p>
+<p>Blood group: O</p>
+<p>University: Srinakharinwirot University</p>
+<p>Faculty: Science</p>
+<p>Major: Computer-Science</p>
+<p>Student ID:58102010818 </p>
+<p>Favorite color: Blue</p>
+<p>Favorite food: Spaghetti Cabonara</p>
+
+</body>
+</html>
+
+
+
+
