--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <head>
 <style>
 body {
-    background-color: lightblue;
+    background-image: url("sea.jpg");
 }
 h1 {
     text-align: center;
 }
 
+
 </style>
 </head>
 <body>
-
+<center><img src="sand.jpg" alt="View" style="width:249px;height:249px;"></center>
 <h1>PROFILE<h1>
 <p>Name: Pakteema Nopsuwanchai </p>
 <p>Nickname: Sand </p>
